--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -6,6 +6,7 @@ RUN go get github.com/derekparker/delve/cmd/dlv
 
 ENV MONGO_URL=mongodb://host.docker.internal:27017
 ENV RABBIT_URL=amqp://host.docker.internal
+ENV AUTH_SERVICE_URL=http://host.docker.internal:3000
 
 # Puerto de Auth Service y debug
 EXPOSE 3004 40000
