--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,6 +7,7 @@ RUN go install /go/src/github.com/nmarsollier/ordersgo
 
 ENV MONGO_URL=mongodb://host.docker.internal:27017
 ENV RABBIT_URL=amqp://host.docker.internal
+ENV AUTH_SERVICE_URL=http://host.docker.internal:3000
 
 # Puerto de Auth Service
 EXPOSE 3004
