--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,7 +8,7 @@ ENV MONGO_URL=mongodb://host.docker.internal:27017
 ENV RABBIT_URL=amqp://host.docker.internal
 ENV AUTH_SERVICE_URL=http://host.docker.internal:3000
 
-RUN curl -L https://github.com/nmarsollier/ordersgo/tarball/master | tar xz --strip=1
+RUN curl -L https://github.com/nmarsollier/ordersgo/archive/refs/heads/master.tar.gz | tar xz --strip=1
 RUN go install /go/src/github.com/nmarsollier/ordersgo
 
 # Puerto de Auth Service
